fixed overflow white space

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 .header {
   background-color: #1f2937;
   font-size: 18px;
@@ -12,7 +21,6 @@
 .header .header-logo {
   color: #f9faf8;
   font-size: 24px;
-  margin: auto;
   padding-left: 10%;
   padding-right: 10%;
   flex: 1 1 0;
@@ -20,7 +28,6 @@
 
 .header .header-link {
   flex: 1 1 0;
-  margin: auto;
   padding-right: 10%;
   flex-direction: row;
 }
@@ -125,8 +132,8 @@
 
 .section-4 {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
+  flex-wrap: wrap;
   padding: 10% 25%;
   text-align: center;
   justify-content: center;
